--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "podcastr",
+  "name": "podcastrnext",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
-    "axios": "^0.23.0",
+    "axios": "^0.21.1",
     "date-fns": "^2.25.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.2"
+    "sass": "^1.43.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.31",
     "json-server": "^0.17.0",
     "typescript": "^4.4.4"
   }
